# serde_patch

./: Cargo.toml  README.md
examples/: full.rs
src/: apply_patch.rs  apply_patch_mut.rs  diff_patch.rs  lib.rs
